--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,3 +181,16 @@ footer ul.quick-links li{
 .ourvalues i:hover{
     border-radius: 50px;
 }
+.staffsection{
+    background-image: url(../images/spongy.png);
+    min-height: 120px;
+    background-size: cover;
+    padding: 80px;
+}
+.staff-section img{
+    border-radius: 50%;
+    transition: .7s linear;
+}
+.staff-section img:hover{
+    box-shadow: 0 0 10px red;
+}
